--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.mediatrackerprojectparttwo/com.example.mediatrackerprojectparttwo.Main
+                                com.example.mediatrackerprojectparttwo/com.example.fakemoncreator.Main
                             </mainClass>
                         </configuration>
                     </execution>
